feat(websocket): initializing finished websocket